# sherpa-onnx

./: .gitignore
cxx-api-examples/: CMakeLists.txt
cxx-api-examples/vibeinput/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preference.ui  preference_manager.cpp  preference_manager.h  preferenceform.cpp  preferenceform.h  vibeinput.cc  vibeinput.h
cxx-api-examples/vibeinput/QHotkey/: CMakeLists.txt
cxx-api-examples/vibeinput/typestr/: .gitignore  CMakeLists.txt  README.md  demo.c  typestr.c  typestr.h
cxx-api-examples/vibeinput/typestr/base/: deadbeef_rand_c.h  xdisplay_c.h
cxx-api-examples/vibeinput/typestr/key/: keycode.h  keycode_c.h  keypress_c.h
sherpa-onnx/csrc/: microphone.cc
